# dendritic-scratch

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  results_scaling.json
_archive/: example.py  example_with_config.py  rst_math_example.rst  training.py
configs/: config_exp.yaml  config_exp_multilayer.yaml  sweep_params.yaml
docs/: about.rst  conf.py  index.rst  refs.bib
docs/figures/ai/: landing_page_1.ai
docs/source/: additional_resources.rst  dendritic_modeling.rst  glossary.rst
docs/source/dend_m/: concepts_overview.rst
docs/source/dend_m/figures/ai/: Dendrinet.ai  Dendrinet_1.ai  EINetClassifier_dataflow.ai
docs/source/users/: interactive_run.rst  references.rst  sweep_job_submission.rst  users.rst
notebooks/: InfoMax_LearningRule.ipynb  scaling_experiment.ipynb  synthetic_exp.ipynb
scripts/: generate_sweep_configs.py  scaling_experiment.py  train.py  tune.py  visualize.py
src/dendritic_modeling/: __init__.py  activation_functions.py  config.py  dendrinet.py  gradient_scaling.py  initialize.py  learning_strategies.py  logging_config.py  models.py  networks.py  plot_utils.py  synthetic_datasets.py  train_experiments.py  utils.py  visualization_manager.py
src/dendritic_modeling_v2/: dendrinet.py  excitation_inhibition.py  inh_exc_info_noisecorrelation.py  schemes.py  test_FFdendrinet.py  training.py  tuning.py  units.py
tests/: test_blocklinear.py  test_dendrinet.py  test_dendritic_branch_layer.py  test_doctest.py  test_logger.py  test_models.py  test_topklinear.py  test_training.py  test_tuning.py  test_utils.py
