[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dendritic_modeling"
version = "0.1.0"
description = "package containing artificial neural networks emulating dendritic computation"
authors = [
{ name = "Maceo Richards", email = "mrichards@g.harvard.edu" }
]
license = { file = "LICENSE" }
classifiers = [
"Programming Language :: Python :: 3",
"License :: OSI Approved :: MIT License",
"Operating System :: OS Independent"
]

dependencies = [
    "torch",
    "numpy",
    "torchvision",
    "torchinfo",
    "matplotlib",
    "wandb",
    "pandas",
    "omegaconf>=2.3.0",
    "scikit-learn"
]

[tool.setuptools]
package-dir = { "" = "src" } 
packages = ["dendritic_modeling", "dendritic_modeling_v2"]  


[project.optional-dependencies]
dev = [
    "ruff",
    "mypy>=1.0,<1.4",
    "black>=23.1,<24.0",
    "isort>=5.12,<5.13",
    "pytest",
    "pytest-cov",
    "pytest-sphinx",
    "twine>=1.11.0",
    "setuptools",
    "wheel",
    "build",
]

train = [

]

all = [
    "dendritic_modeling[dev,train]",
]

docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinxcontrib-napoleon",
    "myst-parser",
    "nbsphinx",
    "recommonmark",
    "sphinx-copybutton",
    "sphinxcontrib-bibtex",

]

